# database_driven_job_search_site

./: .breakpoints  .replit  LICENSE  README.md  app.py  config.py  pyproject.toml  requierments.txt  wireframe.txt
templates/: home.html  image_stuff.html  job_discription.html  jobitems.html  nav.html
